--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_struct_wrapper = "0.3"
-http = "0.2"
+reqwest = { version = "0.11", features = ["blocking"] }
