--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_struct_wrapper = "0.3"
 reqwest = { version = "0.11", features = ["blocking"] }
+
+[target.x86_64-unknown-linux-gnu.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
+
+[target.i686-unknown-linux-musl.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
