--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_struct_wrapper = "0.3"
 reqwest = { version = "0.11", features = ["blocking"] }
+encoding_rs = "0.8.13"
+encoding_rs_io = "0.1.3"
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
